<resources>
    <!-- General -->
    <string name="app_name">My LSO</string>
    <string name="action_administration">Administration</string>
    <string name="action_leaderboard">Leaderboard</string>
    <string name="action_enrollment">Enrollment</string>

    <!-- Strings used for fragments for navigation -->
    <string name="enrollment_fragment_label">Enrollment</string>
    <string name="leaderboard_fragment_label">Leaderboard</string>
    <string name="administration_fragment_label">Administration</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- Enrollment View -->
    <string name="altar_boy_pick_encourage">Find your name</string>
    <string name="event_pick_encourage">Choose event</string>
    <string name="enroll">Enroll yourself!</string>
    <string name="toast_db_error_no_presence_add">Adding the presence failed</string>
    <string name="toast_presence_add_successful">Adding the presence successful!</string>
    <string name="toast_choose_again">Wrong name or event! Choose again.</string>
    <string name="toast_no_data">Lack of names or events! Contact with administrator.</string>
    <string name="toast_frequent_log_in_protection">You\'ve enrolled in the last 30 minutes. You must wait.</string>

    <!-- Administration View -->
    <string name="button_add_altar_boy">add altar boy</string>
    <string name="button_delete_altar_boy">delete altar boy</string>
    <string name="button_add_event">add event</string>
    <string name="button_delete_event">delete event</string>
    <string name="alert_password_needed">Give the password</string>
    <string name="alert_option_accept">Accept</string>
    <string name="alert_option_decline">Decline</string>
    <string name="toast_wrong_password">Wrong password!</string>
    <string name="alert_type_altar_boy_name">Type altar boy name</string>
    <string name="toast_altar_boy_wrong_name">Wrong altar boy name!</string>
    <string name="toast_event_wrong_name">Wrong event name!</string>
    <string name="alert_specify_event_name">Specify event</string>
    <string name="toast_event_wrong_points">Wrong points!</string>
    <string name="alert_add_event_type_name">Type name</string>
    <string name="alert_add_event_type_points">Type points</string>
    <string name="toast_pick_a_boy">You must pick a boy!</string>
    <string name="alert_choose_a_boy">Choose altar boy</string>
    <string name="alert_choose_event">Choose event</string>
    <string name="toast_pick_event">You must pick an event!</string>


    <!-- General messages -->
    <string name="toast_altar_boys_names_problem">There is problem with altar boys names.</string>
    <string name="toast_events_names_problem">There is problem with events names.</string>
    <string name="toast_update_success">Update went successful.</string>
    <string name="toast_update_failure">Update failure! Check data for change and maybe try again.</string>
    <string name="toast_bad_password">Something went wrong with password! Contact with administrator.</string>
    <string name="pick_encourage">&lt;choose&gt;</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>