<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="kornacki.jan.lsoappver3.MainActivity">

    <item
        android:id="@+id/action_enrollment"
        android:orderInCategory="10"
        android:title="@string/action_enrollment"
        app:showAsAction="ifRoom"
        android:icon="@drawable/baseline_add_24" />

    <item
        android:id="@+id/action_administration"
        android:orderInCategory="11"
        android:title="@string/action_administration"
        app:showAsAction="ifRoom"
        android:icon="@drawable/baseline_admin_panel_settings_24" />

    <item
        android:id="@+id/action_leaderboard"
        android:orderInCategory="20"
        android:title="@string/action_leaderboard"
        app:showAsAction="ifRoom"
        android:icon="@drawable/baseline_leaderboard_24" />
</menu>