<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/EnrollmentFragment">

    <fragment
        android:id="@+id/EnrollmentFragment"
        android:name="kornacki.jan.lsoappver3.view.EnrollmentFragment"
        android:label="@string/enrollment_fragment_label"
        tools:layout="@layout/fragment_enrollment">
    </fragment>
    <fragment
        android:id="@+id/LeaderboardFragment"
        android:name="kornacki.jan.lsoappver3.view.LeaderboardFragment"
        android:label="@string/leaderboard_fragment_label"
        tools:layout="@layout/fragment_leaderboard">

        <action
            android:id="@+id/action_LeaderboardFragment_to_EnrollmentFragment"
            app:destination="@id/EnrollmentFragment" />
    </fragment>
    <fragment
        android:id="@+id/AdministrationFragment"
        android:name="kornacki.jan.lsoappver3.view.AdministrationFragment"
        android:label="@string/administration_fragment_label"
        tools:layout="@layout/fragment_administration">

        <action
            android:id="@+id/action_AdministrationFragment_to_EnrollmentFragment"
            app:destination="@id/EnrollmentFragment" />
    </fragment>
</navigation>